Fixed maps spacing issue

--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -29,7 +29,7 @@ h3 {
 
 .maps {
     height: 100%;
-    width: 100%;
+    width: 95%;
 }
 
 iframe {
